<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_movie"
        android:icon="@drawable/ic_tab_movie_24dp"
        android:title="@string/tab_movie" />

    <item
        android:id="@+id/navigation_tvshow"
        android:icon="@drawable/ic_tab_tv_24dp"
        android:title="@string/tab_tv" />
    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/ic_tab_favorite_24dp"
        android:title="Favorite"/>

</menu>
