<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainCatalogue">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_tv"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </androidx.recyclerview.widget.RecyclerView>

    <ProgressBar
        android:id="@+id/progressBarRVTV"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="@+id/list_tv"
        app:layout_constraintStart_toStartOf="@+id/list_tv"
        app:layout_constraintTop_toTopOf="@+id/list_tv" />
</androidx.constraintlayout.widget.ConstraintLayout>