<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainCatalogue">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_movie"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="-88dp"/>

    <ProgressBar
        android:id="@+id/progressBarRVMovie"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="@+id/list_movie"
        app:layout_constraintStart_toStartOf="@+id/list_movie"
        app:layout_constraintTop_toTopOf="@+id/list_movie" />

</androidx.constraintlayout.widget.ConstraintLayout>