...
				android:layout_height="wrap_content"
				android:drawableLeft="@drawable/ic_release_24dp"
				android:drawableStart="@drawable/ic_release_24dp"
				android:text="@string/tv_firstair"
				android:textColor="@color/textLabelColor"
				app:layout_constraintBottom_toTopOf="@+id/labelGenre"
				app:layout_constraintEnd_toStartOf="@+id/tv_firstAirTV"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@id/tv_seasonsTV" />

			<TextView
				android:id="@+id/labelGenre"
				android:layout_width="0dp"
...
